// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blueprint — render snapshots per view > end 1`] = `
{
  "height": 480,
  "id": "end_elevation",
  "scalePxPerFt": {
    "x": 33.45454545454545,
    "y": 33.45454545454545,
  },
  "shapes": [
    {
      "h": 290.2,
      "kind": "rect",
      "style": {
        "fill": "#e0f2fe",
        "stroke": "none",
      },
      "w": 800,
      "x": 0,
      "y": 189.8,
    },
    {
      "a": {
        "x": 0,
        "y": 189.8,
      },
      "b": {
        "x": 800,
        "y": 189.8,
      },
      "kind": "line",
      "style": {
        "stroke": "#0284c7",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 6,
        "y": 185.8,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#0284c7",
        "fontSize": 11,
      },
      "text": "waterline",
    },
    {
      "a": {
        "x": 0,
        "y": 390.5,
      },
      "b": {
        "x": 800,
        "y": 390.5,
      },
      "kind": "line",
      "style": {
        "dashed": true,
        "stroke": "#a8a29e",
      },
    },
    {
      "h": 44.599999999999994,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 66.9,
      "x": 366.55,
      "y": 167.5,
    },
    {
      "h": 16.69999999999999,
      "kind": "rect",
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
      "w": 200.79999999999995,
      "x": 299.6,
      "y": 150.8,
    },
    {
      "a": {
        "x": 516.4,
        "y": 167.5,
      },
      "b": {
        "x": 516.4,
        "y": 189.8,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 512.4,
        "y": 167.5,
      },
      "b": {
        "x": 520.4,
        "y": 167.5,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 512.4,
        "y": 189.8,
      },
      "b": {
        "x": 520.4,
        "y": 189.8,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 522.4,
        "y": 178.65,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "freeboard 8 in",
    },
    {
      "a": {
        "x": 299.6,
        "y": 410.5,
      },
      "b": {
        "x": 500.4,
        "y": 410.5,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 299.6,
        "y": 406.5,
      },
      "b": {
        "x": 299.6,
        "y": 414.5,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 500.4,
        "y": 406.5,
      },
      "b": {
        "x": 500.4,
        "y": 414.5,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 400,
        "y": 405.5,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall width 6 ft",
    },
  ],
  "title": "Elevation — end (real scale)",
  "width": 800,
}
`;

exports[`blueprint — render snapshots per view > fixed plan 1`] = `
{
  "height": 480,
  "id": "plan",
  "scalePxPerFt": {
    "x": 38.22222222222222,
    "y": 38.22222222222222,
  },
  "shapes": [
    {
      "h": 480,
      "kind": "rect",
      "style": {
        "fill": "#e0f2fe",
        "stroke": "none",
      },
      "w": 800,
      "x": 0,
      "y": 0,
    },
    {
      "h": 480,
      "kind": "rect",
      "style": {
        "fill": "#a8a29e",
        "opacity": 0.5,
        "stroke": "none",
      },
      "w": 132.4,
      "x": 0,
      "y": 0,
    },
    {
      "at": {
        "x": 8,
        "y": 20,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#1f2937",
        "fontSize": 11,
        "fontWeight": "bold",
      },
      "text": "SHORE",
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 132.4,
          "y": 144.4,
        },
        {
          "x": 744,
          "y": 144.4,
        },
        {
          "x": 744,
          "y": 335.6,
        },
        {
          "x": 132.4,
          "y": 335.6,
        },
      ],
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 438.20000000000005,
        "y": 240.00000000000003,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 10,
      },
      "text": "16 × 5 ft",
    },
    {
      "c": {
        "x": 132.4,
        "y": 144.4,
      },
      "kind": "circle",
      "r": 4,
      "style": {
        "fill": "#94a3b8",
        "stroke": "#334155",
      },
    },
    {
      "c": {
        "x": 132.4,
        "y": 335.6,
      },
      "kind": "circle",
      "r": 4,
      "style": {
        "fill": "#94a3b8",
        "stroke": "#334155",
      },
    },
    {
      "c": {
        "x": 438.2,
        "y": 144.4,
      },
      "kind": "circle",
      "r": 4,
      "style": {
        "fill": "#94a3b8",
        "stroke": "#334155",
      },
    },
    {
      "c": {
        "x": 438.2,
        "y": 335.6,
      },
      "kind": "circle",
      "r": 4,
      "style": {
        "fill": "#94a3b8",
        "stroke": "#334155",
      },
    },
    {
      "c": {
        "x": 744,
        "y": 144.4,
      },
      "kind": "circle",
      "r": 4,
      "style": {
        "fill": "#94a3b8",
        "stroke": "#334155",
      },
    },
    {
      "c": {
        "x": 744,
        "y": 335.6,
      },
      "kind": "circle",
      "r": 4,
      "style": {
        "fill": "#94a3b8",
        "stroke": "#334155",
      },
    },
    {
      "a": {
        "x": 132.4,
        "y": 363.6,
      },
      "b": {
        "x": 744,
        "y": 363.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 132.4,
        "y": 359.6,
      },
      "b": {
        "x": 132.4,
        "y": 367.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 744,
        "y": 359.6,
      },
      "b": {
        "x": 744,
        "y": 367.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 438.2,
        "y": 358.6,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall length 16 ft",
    },
    {
      "a": {
        "x": 766,
        "y": 144.4,
      },
      "b": {
        "x": 766,
        "y": 335.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 762,
        "y": 144.4,
      },
      "b": {
        "x": 770,
        "y": 144.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 762,
        "y": 335.6,
      },
      "b": {
        "x": 770,
        "y": 335.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 772,
        "y": 240,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall width 5 ft",
    },
    {
      "a": {
        "x": 760,
        "y": 56,
      },
      "b": {
        "x": 760,
        "y": 24,
      },
      "kind": "line",
      "style": {
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 760,
          "y": 20,
        },
        {
          "x": 755,
          "y": 32,
        },
        {
          "x": 765,
          "y": 32,
        },
      ],
      "style": {
        "fill": "#1f2937",
        "stroke": "#1f2937",
      },
    },
    {
      "at": {
        "x": 760,
        "y": 70,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#1f2937",
        "fontSize": 11,
        "fontWeight": "bold",
      },
      "text": "N",
    },
  ],
  "title": "Plan — top view",
  "width": 800,
}
`;

exports[`blueprint — render snapshots per view > isometric 1`] = `
{
  "height": 480,
  "id": "isometric",
  "scalePxPerFt": {
    "x": 15.333333333333336,
    "y": 15.333333333333336,
  },
  "shapes": [
    {
      "h": 480,
      "kind": "rect",
      "style": {
        "fill": "#e0f2fe",
        "opacity": 0.4,
        "stroke": "none",
      },
      "w": 800,
      "x": 0,
      "y": 0,
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 174.3,
          "y": 71.3,
        },
        {
          "x": 439.8,
          "y": 224.7,
        },
        {
          "x": 439.8,
          "y": 209.3,
        },
        {
          "x": 174.3,
          "y": 56,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 439.8,
          "y": 224.7,
        },
        {
          "x": 360.2,
          "y": 270.7,
        },
        {
          "x": 360.2,
          "y": 255.3,
        },
        {
          "x": 439.8,
          "y": 209.3,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 360.2,
          "y": 270.7,
        },
        {
          "x": 94.6,
          "y": 117.3,
        },
        {
          "x": 94.6,
          "y": 102,
        },
        {
          "x": 360.2,
          "y": 255.3,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 94.6,
          "y": 117.3,
        },
        {
          "x": 174.3,
          "y": 71.3,
        },
        {
          "x": 174.3,
          "y": 56,
        },
        {
          "x": 94.6,
          "y": 102,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 174.3,
          "y": 56,
        },
        {
          "x": 439.8,
          "y": 209.3,
        },
        {
          "x": 360.2,
          "y": 255.3,
        },
        {
          "x": 94.6,
          "y": 102,
        },
      ],
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 439.8,
          "y": 224.7,
        },
        {
          "x": 705.4,
          "y": 378,
        },
        {
          "x": 705.4,
          "y": 362.7,
        },
        {
          "x": 439.8,
          "y": 209.3,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 705.4,
          "y": 378,
        },
        {
          "x": 625.7,
          "y": 424,
        },
        {
          "x": 625.7,
          "y": 408.7,
        },
        {
          "x": 705.4,
          "y": 362.7,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 625.7,
          "y": 424,
        },
        {
          "x": 360.2,
          "y": 270.7,
        },
        {
          "x": 360.2,
          "y": 255.3,
        },
        {
          "x": 625.7,
          "y": 408.7,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 360.2,
          "y": 270.7,
        },
        {
          "x": 439.8,
          "y": 224.7,
        },
        {
          "x": 439.8,
          "y": 209.3,
        },
        {
          "x": 360.2,
          "y": 255.3,
        },
      ],
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#1f2937",
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 439.8,
          "y": 209.3,
        },
        {
          "x": 705.4,
          "y": 362.7,
        },
        {
          "x": 625.7,
          "y": 408.7,
        },
        {
          "x": 360.2,
          "y": 255.3,
        },
      ],
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 400,
        "y": 464,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#1f2937",
        "fontSize": 11,
      },
      "text": "40 ft × 6 ft · 240 ft²",
    },
  ],
  "title": "Isometric (~30°)",
  "width": 800,
}
`;

exports[`blueprint — render snapshots per view > plan 1`] = `
{
  "height": 480,
  "id": "plan",
  "scalePxPerFt": {
    "x": 8.686868686868687,
    "y": 8.686868686868687,
  },
  "shapes": [
    {
      "h": 480,
      "kind": "rect",
      "style": {
        "fill": "#e0f2fe",
        "stroke": "none",
      },
      "w": 800,
      "x": 0,
      "y": 0,
    },
    {
      "h": 480,
      "kind": "rect",
      "style": {
        "fill": "#a8a29e",
        "opacity": 0.5,
        "stroke": "none",
      },
      "w": 83.8,
      "x": 0,
      "y": 0,
    },
    {
      "at": {
        "x": 8,
        "y": 20,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#1f2937",
        "fontSize": 11,
        "fontWeight": "bold",
      },
      "text": "SHORE",
    },
    {
      "h": 34.79999999999998,
      "kind": "rect",
      "style": {
        "fill": "#fde9c8",
        "stroke": "#1f2937",
      },
      "w": 312.7,
      "x": 83.8,
      "y": 222.6,
    },
    {
      "at": {
        "x": 240.15,
        "y": 216.6,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#b45309",
        "fontSize": 11,
      },
      "text": "gangway 36 ft @ 8.3%",
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 396.5,
          "y": 213.9,
        },
        {
          "x": 570.3,
          "y": 213.9,
        },
        {
          "x": 570.3,
          "y": 266.1,
        },
        {
          "x": 396.5,
          "y": 266.1,
        },
      ],
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 483.4,
        "y": 240.00000000000003,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 10,
      },
      "text": "20 × 6 ft",
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 570.3,
          "y": 213.9,
        },
        {
          "x": 744,
          "y": 213.9,
        },
        {
          "x": 744,
          "y": 266.1,
        },
        {
          "x": 570.3,
          "y": 266.1,
        },
      ],
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 657.1500000000001,
        "y": 240.00000000000003,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 10,
      },
      "text": "20 × 6 ft",
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 396.54999999999995,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 437.15,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 494.94999999999993,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 535.55,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 396.54999999999995,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 437.15,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 494.94999999999993,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 535.55,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 570.25,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 610.85,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 668.75,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 709.25,
      "y": 213.9,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 570.25,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 610.85,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 668.75,
      "y": 248.7,
    },
    {
      "h": 17.4,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "opacity": 0.85,
        "stroke": "#475569",
      },
      "w": 34.7,
      "x": 709.25,
      "y": 248.7,
    },
    {
      "at": {
        "x": 740,
        "y": 280.1,
      },
      "kind": "text",
      "style": {
        "align": "end",
        "fill": "#b45309",
        "fontSize": 11,
      },
      "text": "ladder",
    },
    {
      "a": {
        "x": 396.5,
        "y": 294.1,
      },
      "b": {
        "x": 744,
        "y": 294.1,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 396.5,
        "y": 290.1,
      },
      "b": {
        "x": 396.5,
        "y": 298.1,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 744,
        "y": 290.1,
      },
      "b": {
        "x": 744,
        "y": 298.1,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 570.25,
        "y": 289.1,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall length 40 ft",
    },
    {
      "a": {
        "x": 766,
        "y": 213.9,
      },
      "b": {
        "x": 766,
        "y": 266.1,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 762,
        "y": 213.9,
      },
      "b": {
        "x": 770,
        "y": 213.9,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 762,
        "y": 266.1,
      },
      "b": {
        "x": 770,
        "y": 266.1,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 772,
        "y": 240,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall width 6 ft",
    },
    {
      "a": {
        "x": 760,
        "y": 56,
      },
      "b": {
        "x": 760,
        "y": 24,
      },
      "kind": "line",
      "style": {
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 760,
          "y": 20,
        },
        {
          "x": 755,
          "y": 32,
        },
        {
          "x": 765,
          "y": 32,
        },
      ],
      "style": {
        "fill": "#1f2937",
        "stroke": "#1f2937",
      },
    },
    {
      "at": {
        "x": 760,
        "y": 70,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#1f2937",
        "fontSize": 11,
        "fontWeight": "bold",
      },
      "text": "N",
    },
  ],
  "title": "Plan — top view",
  "width": 800,
}
`;

exports[`blueprint — render snapshots per view > side 1`] = `
{
  "height": 480,
  "id": "side_elevation",
  "scalePxPerFt": {
    "x": 8.6,
    "y": 8.6,
  },
  "shapes": [
    {
      "h": 389.6,
      "kind": "rect",
      "style": {
        "fill": "#e0f2fe",
        "stroke": "none",
      },
      "w": 800,
      "x": 0,
      "y": 90.4,
    },
    {
      "a": {
        "x": 0,
        "y": 90.4,
      },
      "b": {
        "x": 800,
        "y": 90.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#0284c7",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 6,
        "y": 86.4,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#0284c7",
        "fontSize": 11,
      },
      "text": "waterline (low)",
    },
    {
      "a": {
        "x": 0,
        "y": 142,
      },
      "b": {
        "x": 800,
        "y": 142,
      },
      "kind": "line",
      "style": {
        "dashed": true,
        "stroke": "#a8a29e",
        "strokeWidth": 1.5,
      },
    },
    {
      "at": {
        "x": 6,
        "y": 156,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#a8a29e",
        "fontSize": 11,
      },
      "text": "bottom (−6 ft)",
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 382.8,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 423.2,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 480,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 520.4,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 554.8,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 595.1999999999999,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 652,
      "y": 84.7,
    },
    {
      "h": 11.399999999999991,
      "kind": "rect",
      "style": {
        "fill": "#cbd5e1",
        "stroke": "#475569",
      },
      "w": 34.4,
      "x": 692.4,
      "y": 84.7,
    },
    {
      "h": 4.299999999999997,
      "kind": "rect",
      "style": {
        "fill": "#f5e6c8",
        "stroke": "#1f2937",
        "strokeWidth": 1.5,
      },
      "w": 343.99999999999994,
      "x": 382.8,
      "y": 80.4,
    },
    {
      "a": {
        "x": 742.8,
        "y": 84.7,
      },
      "b": {
        "x": 742.8,
        "y": 90.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 738.8,
        "y": 84.7,
      },
      "b": {
        "x": 746.8,
        "y": 84.7,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 738.8,
        "y": 90.4,
      },
      "b": {
        "x": 746.8,
        "y": 90.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 748.8,
        "y": 87.55000000000001,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "freeboard 8 in",
    },
    {
      "a": {
        "x": 766.8,
        "y": 80.4,
      },
      "b": {
        "x": 766.8,
        "y": 84.7,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 762.8,
        "y": 80.4,
      },
      "b": {
        "x": 770.8,
        "y": 80.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 762.8,
        "y": 84.7,
      },
      "b": {
        "x": 770.8,
        "y": 84.7,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 772.8,
        "y": 82.55000000000001,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "deck 6 in",
    },
    {
      "a": {
        "x": 56,
        "y": 64.6,
      },
      "b": {
        "x": 382.8,
        "y": 80.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#b45309",
        "strokeWidth": 2,
      },
    },
    {
      "at": {
        "x": 219.4,
        "y": 66.5,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#b45309",
        "fontSize": 11,
      },
      "text": "gangway 36 ft @ 8.3%",
    },
    {
      "closed": true,
      "kind": "polygon",
      "points": [
        {
          "x": 0,
          "y": 90.4,
        },
        {
          "x": 56,
          "y": 90.4,
        },
        {
          "x": 56,
          "y": 64.6,
        },
        {
          "x": 0,
          "y": 64.6,
        },
      ],
      "style": {
        "fill": "#a8a29e",
        "opacity": 0.5,
        "stroke": "none",
      },
    },
    {
      "a": {
        "x": 42,
        "y": 90.4,
      },
      "b": {
        "x": 42,
        "y": 64.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 38,
        "y": 90.4,
      },
      "b": {
        "x": 46,
        "y": 90.4,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 38,
        "y": 64.6,
      },
      "b": {
        "x": 46,
        "y": 64.6,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 48,
        "y": 77.5,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "rise 3 ft",
    },
    {
      "a": {
        "x": 382.8,
        "y": 164,
      },
      "b": {
        "x": 726.8,
        "y": 164,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 382.8,
        "y": 160,
      },
      "b": {
        "x": 382.8,
        "y": 168,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "a": {
        "x": 726.8,
        "y": 160,
      },
      "b": {
        "x": 726.8,
        "y": 168,
      },
      "kind": "line",
      "style": {
        "stroke": "#6b7280",
      },
    },
    {
      "at": {
        "x": 554.8,
        "y": 159,
      },
      "kind": "text",
      "style": {
        "align": "middle",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall length 40 ft",
    },
    {
      "at": {
        "x": 382.8,
        "y": 48,
      },
      "kind": "text",
      "style": {
        "align": "start",
        "fill": "#6b7280",
        "fontSize": 11,
      },
      "text": "overall width 6 ft",
    },
  ],
  "title": "Elevation — side (real scale)",
  "width": 800,
}
`;
